<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@color/design_default_color_error"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/bio"
        android:layout_width="328dp"
        android:layout_height="53dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="@string/equations"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />




    <Spinner
        android:id="@+id/spinnerTypeEq"
        android:layout_width="368dp"
        android:layout_height="89dp"
        android:layout_marginTop="15dp"
        android:entries="@array/TypeOFEq"
        android:gravity="center" />

    <TextView
        android:id="@+id/formula"
        android:layout_width="347dp"
        android:layout_height="42dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp"
        android:gravity="center"

        android:text="@string/formula_ax_b"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/EditA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp"
        android:width="200dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/entar_value_a"
        android:inputType="number"
        android:text=""
        tools:ignore="TouchTargetSizeCheck"
        android:autofillHints="" />

    <EditText
        android:id="@+id/EditB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp"
        android:width="200dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/entar_value_b"
        android:inputType="number"
        tools:ignore="TouchTargetSizeCheck"
        android:autofillHints="" />

    <EditText
        android:id="@+id/EditC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp"
        android:width="200dp"
        android:ems="10"
        android:visibility="gone"
        android:gravity="center"
        android:hint="@string/entar_value_c"
        android:inputType="number"
        tools:ignore="TouchTargetSizeCheck"
        android:autofillHints="" />


    <Button
        android:id="@+id/btn_add"
        android:layout_width="218dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp"
        android:onClick="ptnData"
        android:text="@string/calculate" />

    <TextView
        android:id="@+id/tx_res"
        android:layout_width="274dp"
        android:layout_height="195dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="15dp"
        android:height="0dp"
        android:gravity="center"
        android:text=""
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="italic|bold"
        android:backgroundTint="@color/white"



        />


</LinearLayout>